--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "rm -rf dist",
     "prebuild": "npm run clean",
     "build": "tsc",
-    "test": "npm run build && protractor dist/protractor/config.js"
+    "pretest": "npm run build",
+    "test": "protractor dist/protractor/config.js"
   },
   "repository": {
     "type": "git",
