--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "This is a Workshop about Protractor",
   "main": "index.js",
   "scripts": {
-    "test": "protractor protractor.config.js"
+    "clean": "rm -rf dist",
+    "prebuild": "npm run clean",
+    "build": "tsc",
+    "pretest": "npm run build",
+    "test": "protractor dist/protractor/config.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +27,9 @@
   },
   "homepage": "https://github.com/jalvar53/protractor-workshop-2017#readme",
   "devDependencies": {
-    "protractor": "^5.2.0"
+    "@types/jasminewd2": "^2.0.3",
+    "jasmine-spec-reporter": "^4.2.1",
+    "protractor": "^5.2.0",
+    "typescript": "^2.6.2"
   }
 }
