Setting headless browser tests config

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prebuild": "npm run clean",
     "build": "tsc",
     "pretest": "npm run build",
-    "test": "protractor dist/protractor/config.js"
+    "test:local": "protractor dist/protractor/config.js",
+    "test:headless": "protractor dist/protractor/headless.config.js"
   },
   "repository": {
     "type": "git",
