--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "clean": "rm -rf dist",
     "prebuild": "npm run clean",
     "build": "tsc",
+    "postinstall": "webdriver-manager update --gecko false",
     "pretest": "npm run build",
+    "test": "npm run test:headless",
     "test:local": "protractor dist/protractor/config.js",
     "test:headless": "protractor dist/protractor/headless.config.js"
   },
