--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf dist",
+    "lint": "tslint --type-check --project tsconfig.json protractor/**/*.ts src/**/*.ts",
     "prebuild": "npm run clean",
     "build": "tsc",
     "postinstall": "webdriver-manager update --gecko false",
@@ -33,6 +34,8 @@
     "@types/jasminewd2": "^2.0.3",
     "jasmine-spec-reporter": "^4.2.1",
     "protractor": "^5.2.0",
+    "tslint": "^5.8.0",
+    "tslint-config-airbnb": "^5.4.2",
     "typescript": "^2.6.2"
   }
 }
