--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf dist",
+    "lint": "tslint --type-check --project tsconfig.json protractor/**/*.ts src/**/*.ts",
     "prebuild": "npm run clean",
     "build": "tsc",
+    "postinstall": "webdriver-manager update --gecko false",
     "pretest": "npm run build",
+    "test": "npm run test:headless",
     "test:local": "protractor dist/protractor/config.js",
     "test:headless": "protractor dist/protractor/headless.config.js"
   },
@@ -31,6 +34,8 @@
     "@types/jasminewd2": "^2.0.3",
     "jasmine-spec-reporter": "^4.2.1",
     "protractor": "^5.2.0",
+    "tslint": "^5.8.0",
+    "tslint-config-airbnb": "^5.4.2",
     "typescript": "^2.6.2"
   }
 }
