--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a Workshop about Protractor",
   "main": "index.js",
   "scripts": {
-    "clean": "rm -rf dist",
+    "clean": "rm -rf dist reports",
     "lint": "tslint --project tsconfig.json protractor/**/*.ts src/**/*.ts",
     "prebuild": "npm run clean",
     "build": "tsc",
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/jalvar53/protractor-workshop-2017#readme",
   "devDependencies": {
     "@types/jasminewd2": "^2.0.3",
+    "jasmine-awesome-report": "0.0.3",
     "jasmine-spec-reporter": "^4.2.1",
     "protractor": "^5.2.0",
     "tslint": "^5.8.0",
