Adding linting to the pretest script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prebuild": "npm run clean",
     "build": "tsc",
     "postinstall": "webdriver-manager update --gecko false",
-    "pretest": "npm run build",
+    "pretest": "npm run lint && npm run build",
     "test": "npm run test:headless",
     "test:local": "protractor dist/protractor/config.js",
     "test:headless": "protractor dist/protractor/headless.config.js"
