File downloading feature (#23)
* Running JavaScript code to modify properties from Protractor

* Switching contexts with iFrames

* left over import removed

* Following recommendations and restoring previously deleted tests

* Uploading a file, something is missing

* file uploading working correctly

* Enabling the other tests

* Removing leftovers

* Awaiting the values, not the expect

* Fixing errors

* Changing backslash to slash, it was windows dependant

* Downloading feature and checking the download

* Creating the temp folder if its not created

* Clena

* Leaving hasha and trying with crypto

* Changing toMatch for toBe

* Correcting shasum

--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
   },
   "homepage": "https://github.com/jalvar53/protractor-workshop-2017#readme",
   "devDependencies": {
+    "@types/hasha": "^3.0.0",
     "@types/jasminewd2": "^2.0.3",
-    "cross-env": "^5.1.1",
+    "crypto": "^1.0.1",
     "jasmine-awesome-report": "0.0.3",
     "jasmine-spec-reporter": "^4.2.1",
     "protractor": "^5.2.0",
+    "request": "^2.83.0",
     "tslint": "^5.8.0",
     "tslint-config-airbnb": "^5.4.2",
     "typescript": "^2.6.2"
